Fix Vote Choice content overflow

--- a/packages/frontend/src/app/transaction/[hash]/TransactionPage.scss
+++ b/packages/frontend/src/app/transaction/[hash]/TransactionPage.scss
@@ -24,6 +24,12 @@
       }
     }
 
+    &--VoteChoice {
+      .InfoLine__Value {
+        overflow: hidden;
+      }
+    }
+
     &--Schema {
       align-items: flex-start !important;
 
